# SimrailRPCExtender

./: .gitignore  CMakeLists.txt  README.md  steam_appid.txt  toolchain-windows.cmake
src/: main.cpp
src/Discord/: discordAPI.cpp  discordAPI.hpp
